# frakt

./: .gitignore  README.md
complex_math/src/: lib.rs
documentation/: index.html
documentation/src/: crates.js  help.html  search-index.js  settings.html  source-files.js
documentation/src/bit_field/: all.html  index.html  trait.BitArray.html  trait.BitField.html
documentation/src/bytemuck/: all.html  enum.PodCastError.html  fn.bytes_of.html  fn.bytes_of_mut.html  fn.cast.html  fn.cast_mut.html  fn.cast_ref.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.fill_zeroes.html  fn.from_bytes.html  fn.from_bytes_mut.html  fn.pod_align_to.html  fn.pod_align_to_mut.html  fn.pod_read_unaligned.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_ref.html  fn.try_cast_slice.html  fn.try_cast_slice_mut.html  fn.try_from_bytes.html  fn.try_from_bytes_mut.html  fn.try_pod_read_unaligned.html  fn.write_zeroes.html  index.html  trait.AnyBitPattern.html  trait.Contiguous.html  trait.NoUninit.html  trait.Pod.html  trait.PodInOption.html  trait.Zeroable.html  trait.ZeroableInOption.html
documentation/src/byteorder/: enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
documentation/src/complex_math/: all.html  index.html  (+1 more)
server/: Cargo.toml
server/src/: main.rs
server/src/server_services/: server.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/messages/: fragment_request.rs  fragment_result.rs  fragment_task.rs  mod.rs
worker/src/: main.rs
(+5120 files in other folders)
