[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
complex_math = { path = "../complex_math" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
image = "0.24"
rand = "0.8"
